linux 支持在线升级

--- a/modules/server/src/main/resources/vm/system/update.vm
+++ b/modules/server/src/main/resources/vm/system/update.vm
@@ -46,9 +46,9 @@
                 for (var key in data.data) {
                     $("span[" + key.toLowerCase() + "]").text(data.data[key]);
                 }
-                // if (data.data.debug === false) {
-                $("#selectFile").show()
-                // }
+                if (data.data.debug === false) {
+                    $("#selectFile").show()
+                }
             }
         });
 
