--- a/modules/server/src/main/resources/vm/user/edit.vm
+++ b/modules/server/src/main/resources/vm/user/edit.vm
@@ -199,11 +199,10 @@
 
             //加载树
             function loadNode() {
-                var nodeModels = '$!nodeModels';
-                if (!nodeModels) {
-                    return;
-                }
-                nodeModels = eval("(" + nodeModels + ")");
+                var nodeModels =[];
+                #if($nodeModels)
+                    nodeModels = $nodeModels;
+                #end
                 if (nodeModels && nodeModels.length > 0) {
                     for (var j = 0; j < nodeModels.length; j++) {
                         var nodeModel = nodeModels[j];
