刷新项目列表

--- a/modules/server/src/main/resources/vm/node/manage/console.vm
+++ b/modules/server/src/main/resources/vm/node/manage/console.vm
@@ -320,7 +320,7 @@
     ## 刷新项目数据
     function refreshProjectData() {
         try {
-            top.frames["manage"].location.reload();
+            top.frames["manageList"].location.reload();
         } catch (e) {
         }
     }
